<resources>
    <string name="app_name">Zonkoid</string>
    <string name="authorizingUser">Autorizuji uživatele…</string>
    <string name="reloadingMarket">Prohlížím tržiště…</string>
    <string name="CZK">" Kč"</string>
    <string name="balance">"zůstatek "</string>
    <string name="yes">Ano</string>
    <string name="no">Ne</string>
    <string name="investedOk">V pořádku zainvestováno.</string>
    <string name="not_enough_cash">Nemáte dostatek prostředků!</string>
    <string name="title_activity_settings_notifications">Nastavení oznámení</string>
    <string name="title_activity_settings_user">Nastavení přihlašování</string>
    <string name="title_activity_settings_autoinvest">Nastavení autoinvestu</string>
    <string name="pref_title_username">Přihlašovací jméno</string>
    <string name="pref_default_username">nekdo@zonky.cz</string>
    <string name="pref_title_password">Heslo</string>
    <string name="pref_default_password">*****</string>
    <string name="colorTyrkys">#37b1bf</string>
    <string name="title_activity_loan_details">LoanDetailsActivity</string>
    <string name="action_settings">Nastavení</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="canViewAfterLogin">Tento obsah uvidíte až po přihlášení.</string>
    <string name="less12"><![CDATA[ 0-12]]></string>
    <string name="less24"><![CDATA[13-24]]></string>
    <string name="less36"><![CDATA[25-36]]></string>
    <string name="less48"><![CDATA[37-48]]></string>
    <string name="less60"><![CDATA[49-60]]></string>
    <string name="less72"><![CDATA[61-72]]></string>
    <string name="less84"><![CDATA[73-84]]></string>
    <string name="notifications">Oznámení nové půjčky</string>
    <string name="user_account">Zonky účet</string>
    <string name="choose_push_notifs">Vyberte si, které ratingy se splatností v měsících chcete notifikovat.</string>
    <string name="not_logged_in">nepřihlášen</string>
    <string name="beBetatesterDesc">Souhlasím s Podmínkami používání (viz zonkoid.cz)
        a beru na vědomí, že přihlašovací údaje budou uloženy pouze na tomto zařízení a nebudou předány třetím stranám.
    </string>
    <string name="ok">Ok</string>
    <string name="zonkyUnavailable">Zonky provádí údržbu a proto se teď nic nezobrazí. Zkuste to později.</string>
    <string name="myInvestment">mám investováno %.0f,-Kč</string>
    <string name="list_of_investors">Seznam investorů</string>
    <string name="title_activity_messaging">MessagingActivity</string>
    <string name="action_messages">Zprávy</string>
    <string name="bugrep_header">Uveďte stručně chybu, pro detailnějí popis emailujte na office@urbancoders.eu</string>
    <string name="bugreport_sent">Hlášení chyby bylo odesláno.</string>
    <string name="title_activity_password_reset">PasswordResetActivity</string>
    <string name="your_email">Váš email / přihlašovací jméno</string>
    <string name="zaslat_heslo">Zaslat heslo</string>
    <string name="reset_hesla">Zaslat heslo</string>
    <string name="waitForCaptcha">Počkejte prosím na načtení CAPTCHA a potvrďte, že nejste robot.</string>
    <string name="are_you_robot">Počkejte prosím na načtení CAPTCHA a potvrďte, že nejste robot.</string>
    <string name="title_activity_investing">InvestingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="invest">Investovat %1$d,-Kč</string>
    <string name="investing">Investování</string>
    <string name="detail_pujcky">Detail půjčky</string>
    <string name="zpravy">Zprávy</string>
    <string name="marketplace">Tržiště</string>
    <string name="already_invested_or_less">Půjčka už je zainvestovaná, nebo zbývá zainvestovat méně než %1$d,-Kč
    </string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="open">Otevřít</string>
    <string name="close">Zavřít</string>
    <string name="notification_new_loan">Oznámení nové půjčky</string>
    <string name="settings_user">Přihlašování</string>
    <string name="settings_autoinvest">Autoinvest</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="zonkoidInvested">přes Zonkoid</string>
    <string name="show_covered">Zobrazit také kompletně zainvestované</string>
    <string name="covered">100% investováno</string>
    <string name="multipleInvestment">Do půjčky už máte zainvestováno, další navýšení investice není možné.</string>
    <string name="alreadyCovered">Půjčka už je bohužel kompletně zainvestovaná</string>
    <string name="question_send">Odeslat</string>
    <string name="question_ask_text">Zeptejte se {%1}</string>
    <string name="cancel">Zrušit</string>
    <string name="question_new">Položte otázku dlužníkovi</string>
    <string name="question_edit">Upravte otázku</string>
    <string name="number_of_investors">Počet investorů: %1$d</string>
    <string name="zonkoid_investors_number">přes Zonkoid: %1$d (%2$.1f%%)</string>
    <string name="average_amount">Průměrná částka: %1$d,-Kč</string>
    <string name="maximum_amount">Nejvyšší částka: %1$d,-Kč</string>
    <string name="income_EMPLOYMENT">Zaměstnanec</string>
    <string name="income_ENTREPRENEUR">Podnikatel</string>
    <string name="income_SELF_EMPLOYMENT">OSVČ</string>
    <string name="income_PENSION">Důchod</string>
    <string name="income_MATERNITY_LEAVE">Rodičovská dovolená</string>
    <string name="income_STUDENT">Student</string>
    <string name="income_UNEMPLOYED">Bez zaměstnání</string>
    <string name="income_LIBERAL_PROFESSION">Svobodné povolání</string>
    <string name="income_OTHERS_MAIN">Jiný hlavní příjem</string>
    <string name="income_NEXT_WORK">Brigády</string>
    <string name="income_RENT">Pronájem</string>
    <string name="income_ART_ACTION">Umělecká činnost</string>
    <string name="income_ALIMONY">Alimenty</string>
    <string name="income_NEXT_PENSION">Druhý důchod (vdovský, apod.)</string>
    <string name="income_NEXT_OTHERS">Jiné (renta, akcie …)</string>
    <string name="region_0">kraj neuveden</string>
    <string name="region_1">Hlavní město Praha</string>
    <string name="region_2">Středočeský kraj</string>
    <string name="region_3">Jihočeský kraj</string>
    <string name="region_4">Plzeňský kraj</string>
    <string name="region_5">Karlovarský kraj</string>
    <string name="region_6">Ústecký kraj</string>
    <string name="region_7">Liberecký kraj</string>
    <string name="region_8">Královéhradecký kraj</string>
    <string name="region_9">Pardubický kraj</string>
    <string name="region_10">Kraj Vysočina</string>
    <string name="region_11">Jihomoravský kraj</string>
    <string name="region_12">Olomoucký kraj</string>
    <string name="region_13">Moravskoslezský kraj</string>
    <string name="region_14">Zlínský kraj</string>
    <string name="wallet_category_PAYMENT">Splátka půjčky</string>
    <string name="wallet_category_DEPOSIT">Nabití vaší peněženky</string>
    <string name="wallet_category_INVESTMENT">Investice do</string>
    <string name="wallet_category_INVESTMENT_FEE">Poplatek za investování</string>
    <string name="wallet_category_WITHDRAW">Převod na bankovní účet</string>
    <string name="wallet_transaction_in">Příjem</string>
    <string name="wallet_transaction_out">Výdaj</string>
    <string name="title_activity_settings_notifications_zonky">Oznámení ze Zonky</string>
    <string name="title_activity_settings_notifications_robozonky">Oznámení z RoboZonky</string>
    <string name="action_help">Nápověda</string>
    <string name="copyright"><![CDATA[\u00a9 Urbancoders.eu, verze {0}]]></string>
    <string name="please_upgrade">Pro investování prosím aktualizujte na nejnovější verzi.
    </string>
    <string name="title_activity_portfolio">Portfolio</string>
    <string name="title_portfolio_menu_actual">Aktuální</string>
    <string name="title_portfolio_menu_total">Celkové</string>
    <string name="title_portfolio_menu_wallet">Peněženka</string>
    <string name="action_portfolio">Portfolio</string>
    <string name="portfolio_risk_chart">Investice podle rizika</string>
    <string name="interestLeftDue">úroků po splatnosti</string>
    <string name="interestPaid">zaplacený úrok</string>
    <string name="interestPlanned">očekávaný úrok</string>
    <string name="principalLeftDue">po splatnosti</string>
    <string name="principalPaid">vráceno</string>
    <string name="totalInvestment">půjčeno</string>
    <string name="investmentCount">počet aktivních investic</string>
    <string name="graf_current_portfolio">Investice podle rizikových kategorií</string>
    <string name="investmentCountOverall">počet investic</string>
    <string name="totalInvestmentOverall">celkem investováno</string>
    <string name="principalPaidOverall">vráceno</string>
    <string name="principalLostOverall">ztraceno</string>
    <string name="netIncome">vyděláno</string>
    <string name="interestPaidOverall">zaplacený úrok</string>
    <string name="feesAmount">zaplaceno na poplatcích</string>
    <string name="currentProfitability">aktuální výnos</string>
    <string name="expectedProfitability">očekávaný výnos</string>
    <string name="portfolioGrafValuesForPayments">Skutečně zaplaceno</string>
    <string name="portfolioGrafValuesForInstallment">Očekávané platby</string>
    <string name="portfolioGrafCenterText">Zvolte výseč grafu pro zobrazení detailních informací</string>
    <string name="investAdditional">Investovat další %1$d,-Kč</string>
    <string name="action_marketplace">Tržiště</string>
    <string name="action_wallet">Peněženka</string>
    <string name="cashFlowChartHeader">Jak mi lidé splácí</string>
    <string name="presetAmountToInvest">Předvolená částka</string>
    <string name="presetAmountToAutoInvest">Částka pro autoinvest</string>
    <string name="noPresetAmountSet">Zrychlete si investování. Po příchodu notifikace nebudete muset vybírat částku, ale rovnou přejdete k investování s předvolenou částkou.</string>
    <string name="noPresetAutoinvestAmountSet">Zrychlete si investování. Po příchodu notifikace se vybraná částka automaticky zainvestuje do vybraných půjček.</string>
    <string name="turnOffNotifSummary">Vypněte všechny notifikace, pokud nechcete být rušeni.</string>
    <string name="turnOfNotif">Vypnout oznámení</string>
    <string name="notifSound">Zvuk oznámení</string>
    <string name="vibrate">Vibrovat</string>
    <string name="radio_all">Všechny</string>
    <string name="radio_active">Aktivní</string>
    <string name="show_filtered">Zobrazit</string>
    <string name="radio_problem">Problematické</string>
    <string name="radio_signed">Čeká na zainvestování</string>
    <string name="radio_paid">Splacené</string>
    <string name="notify_insured_only">Pouze pojištěné</string>
    <string name="autoinvest_insured_only">Pouze pojištěné</string>
    <string name="autoinvest_disclaimer">Výběrem částky a nastavením kritérií pro automatické investování souhlasíte s tím, že aplikace bude sama investovat podle Vámi zadaných kritérií. Nastavení provádíte z vlastní vůle a autor aplikace nenese žádnou odpovědnost za případnou škodu, způsobenou tímto nastavením.</string>
    <string name="autoinvest_explanation">Autoinvest funguje pouze pokud chodí notifikace, tedy v případě, že nemáte síťové spojení, nedostanete notifikaci a tím pádem autoinvest nepracuje.</string>
    <string name="autoinvest_max_amount">Maximální požadovaná částka</string>
    <string name="autoinvest_regions_desc">Investovat pouze do půjček z vybraných krajů</string>
    <string name="autoinvest_only_with_previous_loans">Pouze 2. a další půjčka</string>
</resources>