<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item android:id="@+id/action_drawer_marketplace"
              android:title="@string/action_marketplace"
              android:icon="@drawable/ic_marketplace"
              android:checkable="false"
        />
        <item android:id="@+id/action_drawer_portfolio"
              android:title="@string/action_portfolio"
              android:icon="@drawable/ic_portfolio"
              android:checkable="false"
        />
        <item android:id="@+id/action_drawer_wallet"
              android:title="@string/action_wallet"
              android:icon="@drawable/ic_wallet"
              android:checkable="false"
        />
        <item android:id="@+id/action_drawer_messages"
              android:title="@string/action_messages"
              android:icon="@drawable/ic_messages"
              app:actionLayout="@layout/drawer_menu_badge"
              android:checkable="false"
        />
        <item android:id="@+id/action_drawer_help"
              android:title="@string/action_help"
              android:icon="@drawable/ic_help"
              android:checkable="false"
        />
    </group>

    <group android:checkableBehavior="single">
        <item android:title="Nastavení">
            <menu>
                <!--<item android:id="@+id/action_drawer_show_covered"-->
                      <!--android:title="@string/show_covered"-->
                      <!--app:actionLayout="@layout/drawer_checkbox"-->
                      <!--android:icon="@drawable/ic_covered"-->
                <!--/>-->
                <item android:id="@+id/action_drawer_settings_notifications"
                      android:title="@string/notification_new_loan"
                      android:icon="@drawable/ic_notifications"
                />
                <item android:id="@+id/action_drawer_settings_autoinvest"
                    android:title="@string/settings_autoinvest"
                    android:icon="@drawable/ic_autoinvest"
                    />
                <item android:id="@+id/action_drawer_settings_user"
                      android:title="@string/settings_user"
                      android:icon="@drawable/ic_login"
                />
            </menu>
        </item>
    </group>

</menu>
