<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory>
        <SwitchPreference
            android:key="mute_notif"
            android:title="@string/turnOfNotif"
            android:summary="@string/turnOffNotifSummary"
            />

        <eu.urbancoders.zonkysniper.AmountToInvestPreference
            android:key="presetAmountToInvest"
            android:title="@string/presetAmountToInvest"
            android:summary="@string/noPresetAmountSet"
            />

        <RingtonePreference android:showDefault="true"
            android:key="zonkoid_notif_sound"
            android:title="@string/notifSound"
            android:ringtoneType="notification"
            />

        <SwitchPreference
            android:key="zonkoid_notif_vibrate"
            android:title="@string/vibrate"
            />

        <eu.urbancoders.zonkysniper.PushNotifMatrixPreference
                android:key="push_notif_mask"
                android:dialogLayout="@layout/push_notif_matrix"
                android:layout="@layout/push_notif_matrix"
                android:widgetLayout="@layout/push_notif_matrix"
        >
        </eu.urbancoders.zonkysniper.PushNotifMatrixPreference>

        <SwitchPreference
            android:key="zonkoid_notif_insured_only"
            android:title="@string/notify_insured_only"
            />

        <Preference />

    </PreferenceCategory>

    <!--<PreferenceCategory-->
        <!--android:title="@string/user_account">-->

        <!--<CheckBoxPreference-->
            <!--android:key="isBetatester"-->
            <!--android:title="@string/beBetatester"-->
            <!--android:summary="@string/beBetatesterDesc"-->
        <!--&gt;-->
        <!--</CheckBoxPreference>-->


        <!--<EditTextPreference-->
                <!--android:key="username"-->
                <!--android:title="@string/pref_title_username"-->
                <!--android:defaultValue="@string/pref_default_username"-->
                <!--android:selectAllOnFocus="true"-->
                <!--android:inputType="textCapWords"-->
                <!--android:capitalize="words"-->
                <!--android:singleLine="true"-->
                <!--android:maxLines="1"-->
        <!--/>-->
        <!--<eu.urbancoders.zonkysniper.SecuredEditTextPreference-->
                <!--android:key="password"-->
                <!--android:title="@string/pref_title_password"-->
                <!--android:defaultValue="@string/pref_default_password"-->
                <!--android:selectAllOnFocus="true"-->
                <!--android:inputType="textPassword"-->
                <!--android:password="true"-->
                <!--android:singleLine="true"-->
                <!--android:maxLines="1"/>-->

    <!--</PreferenceCategory>-->
</PreferenceScreen>