<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory>
        <Preference
            android:selectable="false"
            android:enabled="true"
            android:key="textOnly"
            android:title="Upozornění"
            android:summary="@string/autoinvest_disclaimer" />

        <Preference
            android:selectable="false"
            android:enabled="true"
            android:key="textOnly2"
            android:title=""
            android:summary="@string/autoinvest_explanation" />

        <eu.urbancoders.zonkysniper.AmountToAutoInvestPreference
            android:key="presetAmountToAutoInvest"
            android:title="@string/presetAmountToAutoInvest"
            android:summary="@string/noPresetAutoinvestAmountSet"
            />

        <eu.urbancoders.zonkysniper.investing.AutoInvestMatrixPreference
            android:key="auto_invest_mask"
            android:dialogLayout="@layout/auto_invest_matrix"
            android:layout="@layout/auto_invest_matrix"
            android:widgetLayout="@layout/auto_invest_matrix"
            >
        </eu.urbancoders.zonkysniper.investing.AutoInvestMatrixPreference>

        <SwitchPreference
            android:key="zonkoid_autoinvest_insured_only"
            android:title="@string/autoinvest_insured_only"
            />

        <SwitchPreference
            android:key="zonkoid_autoinvest_only_with_previous_loans"
            android:title="@string/autoinvest_only_with_previous_loans"
            />

        <EditTextPreference
            android:key="zonkoid_autoinvest_max_amount"
            android:title="@string/autoinvest_max_amount"
            android:inputType="number"
            />

        <eu.urbancoders.zonkysniper.investing.AutoInvestIncomePreference
            android:key="zonkoid_autoinvest_income_types"
            android:dialogLayout="@layout/auto_invest_income"
            android:layout="@layout/auto_invest_income"
            android:widgetLayout="@layout/auto_invest_income"
            />

        <!--<eu.urbancoders.zonkysniper.RegionsImageMapPreference-->
            <!--android:key="zonkoid_autoinvest_regions"-->
            <!--android:dialogLayout="@layout/regions_image_map"-->
            <!--android:layout="@layout/regions_image_map"-->
            <!--android:widgetLayout="@layout/regions_image_map"-->
            <!--/>-->

    </PreferenceCategory>

    <PreferenceCategory>

        <Preference
            android:key="autoinvest_regions_textonly"
            android:title="Kraj žadatele"
            android:summary="@string/autoinvest_regions_desc"
            />

        <SwitchPreference android:key="switch_region_1" android:title="Hlavní město Praha" />
        <SwitchPreference android:key="switch_region_2" android:title="Středočeský kraj" />
        <SwitchPreference android:key="switch_region_3" android:title="Jihočeský kraj" />
        <SwitchPreference android:key="switch_region_4" android:title="Plzeňský kraj" />
        <SwitchPreference android:key="switch_region_5" android:title="Karlovarský kraj" />
        <SwitchPreference android:key="switch_region_6" android:title="Ústecký kraj" />
        <SwitchPreference android:key="switch_region_7" android:title="Liberecký kraj" />
        <SwitchPreference android:key="switch_region_8" android:title="Královéhradecký kraj" />
        <SwitchPreference android:key="switch_region_9" android:title="Pardubický kraj" />
        <SwitchPreference android:key="switch_region_10" android:title="Kraj Vysočina" />
        <SwitchPreference android:key="switch_region_11" android:title="Jihomoravský kraj" />
        <SwitchPreference android:key="switch_region_12" android:title="Olomoucký kraj" />
        <SwitchPreference android:key="switch_region_13" android:title="Moravskoslezský kraj" />
        <SwitchPreference android:key="switch_region_14" android:title="Zlínský kraj" />

    </PreferenceCategory>



    <PreferenceCategory>

    </PreferenceCategory>
</PreferenceScreen>