<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
                tools:context="eu.urbancoders.zonkysniper.portfolio.PortfolioCurrentFragment"
>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/investmentCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/investmentCountOverall"/>

            <LinearLayout android:id="@+id/hodnoty"
                          android:layout_width="fill_parent"
                          android:layout_height="fill_parent"
                          android:layout_below="@id/investmentCount"
                          android:orientation="horizontal"
                          android:layout_marginTop="10dp"
                          android:baselineAligned="false">

                <LinearLayout android:layout_width="0dp"
                              android:layout_height="fill_parent"
                              android:layout_weight="1"
                              android:gravity="end"
                              android:layout_marginEnd="15dp"
                              android:orientation="vertical"
                              android:layout_marginRight="15dp">
                    <TextView
                            android:id="@+id/totalInvestment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0 Kč"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@color/AAA"
                    />
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/totalInvestmentOverall"
                            android:textSize="12sp"
                    />

                    <TextView
                            android:id="@+id/principalPaid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="0 Kč"
                            android:textStyle="bold"
                    />
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/principalPaidOverall"
                            android:textSize="12sp"
                    />

                    <TextView
                            android:id="@+id/principalLost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="0 Kč"
                            android:textStyle="bold"
                    />
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/principalLostOverall"
                            android:textSize="12sp"
                    />
                </LinearLayout>

                <LinearLayout android:layout_width="0dp"
                              android:layout_height="fill_parent"
                              android:layout_weight="1"
                              android:layout_marginStart="15dp"
                              android:orientation="vertical"
                              android:layout_marginLeft="15dp">
                    <TextView
                            android:id="@+id/netIncome"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0 Kč"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@color/AAA"
                    />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/netIncome"
                            android:textSize="12sp"
                    />

                    <TextView
                            android:id="@+id/interestPaid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0 Kč"
                            android:layout_marginTop="6dp"
                            android:textStyle="bold"
                    />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/interestPaidOverall"
                            android:textSize="12sp"
                    />

                    <TextView
                            android:id="@+id/feesAmount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0 Kč"
                            android:layout_marginTop="6dp"
                            android:textStyle="bold"
                    />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/feesAmount"
                            android:textSize="12sp"
                    />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:id="@+id/cashFlowChartHeader"
                    android:layout_below="@id/hodnoty"
                    android:background="@color/tabColor"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:layout_marginTop="10dp"
            >

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cashFlowChartHeader"
                        android:layout_marginTop="20dp"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                />

            </LinearLayout>

            <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/cashFlowChart"
                    android:layout_width="match_parent"
                    android:layout_below="@id/cashFlowChartHeader"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_height="250dp"
                    />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
